--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-HTTPS=true
-SSL_CRT_FILE=localhost.pem 
-SSL_KEY_FILE=localhost-key.pem 
+# HTTPS=true
+#SSL_CRT_FILE=localhost.pem 
+#SSL_KEY_FILE=localhost-key.pem   
 # SSL_CRT_FILE=192.168.100.12.pem 
 #   SSL_KEY_FILE=192.168.100.12-key.pem
 REACT_APP_API_URL="http://localhost:5000"
